Bug 1326159 - Update TF buffer restrictions. - r=daoshengmu

Update conformance2/buffers/bound-buffer-size-change-test.html to top-of-tree 2.0.0.

MozReview-Commit-ID: CgfP70Y0wul